--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -165,3 +165,83 @@ main {
     font-size: 16px;
     color: #757575;
 }
+
+/* resume section */
+.resume-section-title {
+    font-weight: 700;
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 113px;
+}
+
+.resume-title {
+    font-weight: 700;
+    font-size: 30px;
+
+}
+
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume .title {
+    color: #474747;
+    font-weight: 700;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.resume .subtitle {
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.resume .description {
+    color: #757575;
+    font-weight: 400;
+    font-size: 16px;
+
+}
+
+.resume-btn {
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+/* contact styles */
+.contact {
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+}
+
+.contact .section-title {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.contact a img {
+    margin-top: 30px;
+}
+
+.contact input,
+textarea {
+    margin-bottom: 24px;
+    border: o;
+    width: 100%;
+    padding: 18px 30px;
+}
+
+input {
+    height: 64px;
+}
