--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -234,6 +234,10 @@ main {
     margin-top: 30px;
 }
 
+.contact a {
+    text-decoration: none;
+}
+
 .contact input,
 textarea {
     margin-bottom: 24px;
